# cmdenglishassist

./: .gitignore  LICENSE  README.md  TODO.md  anki_question2023-03-24_07:31:03.apkg  anki_question2023-03-24_08:05:03.apkg  anki_question2023-03-24_15:26:26.apkg  anki_question2023-03-24_19:37:48.apkg  anki_question2023-03-25_15:14:27.apkg  anki_question2023-03-25_15:15:02.apkg  anki_question_2023-04-17_07:57:10.apkg  anki_question_2023-04-18_07:24:42.apkg  anki_question_2023-07-11_17:15:58.apkg  example_questions.json  install.sh  publish_package  questions.json  requirements.txt  run  run_anki  set_version  setup.cfg  setup.py  test.md  test.yml  uninstall.sh
cmdenglishassist/: __init__.py  cmdenglishassist.py
cmdenglishassist/anki/: __init__.py  anki_generator.py  handler.py  parse_markdown.py  parse_type.py  question_type.py  subparser.py  templates.py
cmdenglishassist/audio/: __init__.py  audio_generator.py  handler.py  subparser.py
cmdenglishassist/card/: __init__.py  card_generator.py  consts.py  core.py  handler.py  pdf_grid.py  subparser.py
cmdenglishassist/json/: __init__.py  handler.py  subparser.py
cmdenglishassist/read/: __init__.py  handler.py  read_generator.py  subparser.py
cmdenglishassist/shared/: __init__.py  core.py  date_core.py  parser.py  (+4 more)
english-flashcards/: although-even-though-in-spite-of-despite.yaml  conditionals.yaml  could.yaml  either.yaml  grammar-tickets.md  in-case.yaml  supposed-to.yaml  time-expressions.yaml  unless-as-long-as-provided.md  would.yaml
samples/: markdown-questions.md  questions.json  questions.yml
(+7 files in other folders)
