[metadata]
name = cmdenglishassist
version = 0.0.2
keywords = command, terminal, console, utilities
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Utilities

[options]
packages = cmdenglishassist 
install_requires =
    rich
    sqlalchemy

[options.entry_points]
console_scripts =
    cmdenglishassist = cmdenglishassist.cmdenglishassist:main
